RedirectArea component fixing spacing, align and position issues

--- a/modulo2/react/digital_store/src/index.css
+++ b/modulo2/react/digital_store/src/index.css
@@ -19,6 +19,9 @@
   width: 243px;
   height: 44px;
 }
+#header-redirect {
+  font-size: 1.0rem;
+}
 input {
   padding: 10px;
 }
